{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 330,
  "lineage": "0add0535-cfe3-5314-e05d-9d68b88fdc7b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eacaf17eb6cb0a3b",
            "association_id": "eipassoc-08a115268683126ec",
            "domain": "vpc",
            "id": "eipalloc-0eacaf17eb6cb0a3b",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-071d80b11625e3f8c",
            "private_dns": "ip-10-0-0-188.eu-west-1.compute.internal",
            "private_ip": "10.0.0.188",
            "public_dns": "ec2-79-125-72-35.eu-west-1.compute.amazonaws.com",
            "public_ip": "79.125.72.35",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08edbb0e85d6a0a07",
            "arn": "arn:aws:ec2:eu-west-1:556245254540:instance/i-0f3e0d3b68a9d5f4a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f3e0d3b68a9d5f4a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04ceb84425a28dd01",
            "private_dns": "ip-10-0-0-124.eu-west-1.compute.internal",
            "private_ip": "10.0.0.124",
            "public_dns": "ec2-34-241-131-194.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.241.131.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b9d669ed274a01bc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0819bc6db9668e7b1",
            "tags": {
              "Name": "instance_1"
            },
            "tags_all": {
              "Name": "instance_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b80485b220425934"
            ]
          },
          "dependencies": [
            "aws_api_gateway_deployment.example",
            "aws_security_group.secgroup_webserv",
            "aws_subnet.TMCloud-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "TMCloud-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:556245254540:internet-gateway/igw-01f0aca6d801b52ee",
            "id": "igw-01f0aca6d801b52ee",
            "owner_id": "556245254540",
            "tags": {
              "Name": "TMCloud-GW"
            },
            "tags_all": {
              "Name": "TMCloud-GW"
            },
            "vpc_id": "vpc-03d6f203768b98756"
          },
          "dependencies": [
            "aws_vpc.TMCloud-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "TMCloud-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eacaf17eb6cb0a3b",
            "connectivity_type": "public",
            "id": "nat-092d4eed6ee9e76a7",
            "network_interface_id": "eni-071d80b11625e3f8c",
            "private_ip": "10.0.0.188",
            "public_ip": "79.125.72.35",
            "subnet_id": "subnet-0819bc6db9668e7b1"
          },
          "dependencies": [
            "aws_internet_gateway.TMCloud-gw",
            "aws_subnet.TMCloud-public-1",
            "aws_vpc.TMCloud-VPC",
            "aws_eip.nat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TMCloud-rt-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:556245254540:route-table/rtb-0a1b0a6a5e6c9b9e8",
            "id": "rtb-0a1b0a6a5e6c9b9e8",
            "owner_id": "556245254540",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-092d4eed6ee9e76a7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TMCloud-rt-private"
            },
            "tags_all": {
              "Name": "TMCloud-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d6f203768b98756"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.TMCloud-natgw",
            "aws_vpc.TMCloud-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TMCloud-rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:556245254540:route-table/rtb-03b80cae8287dc6c9",
            "id": "rtb-03b80cae8287dc6c9",
            "owner_id": "556245254540",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f0aca6d801b52ee",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TMCloud-rt-public"
            },
            "tags_all": {
              "Name": "TMCloud-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d6f203768b98756"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.TMCloud-gw",
            "aws_vpc.TMCloud-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "TMCloud-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e8d0e62b3338e03",
            "route_table_id": "rtb-0a1b0a6a5e6c9b9e8",
            "subnet_id": "subnet-07fef2dd1b2bb56f6"
          },
          "dependencies": [
            "aws_vpc.TMCloud-VPC",
            "aws_eip.nat",
            "aws_internet_gateway.TMCloud-gw",
            "aws_nat_gateway.TMCloud-natgw",
            "aws_route_table.TMCloud-rt-private",
            "aws_subnet.TMCloud-private-1",
            "aws_subnet.TMCloud-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "TMCloud-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ec2588ff340dc88",
            "route_table_id": "rtb-03b80cae8287dc6c9",
            "subnet_id": "subnet-0819bc6db9668e7b1"
          },
          "dependencies": [
            "aws_internet_gateway.TMCloud-gw",
            "aws_route_table.TMCloud-rt-public",
            "aws_subnet.TMCloud-public-1",
            "aws_vpc.TMCloud-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secgroup_webserv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:556245254540:security-group/sg-0b80485b220425934",
            "description": "Allow inbound http traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b80485b220425934",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 445,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 445
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "secgroup_webserv",
            "name_prefix": "",
            "owner_id": "556245254540",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_sec_group"
            },
            "tags_all": {
              "Name": "terraform_sec_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d6f203768b98756"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.TMCloud-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TMCloud-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:556245254540:subnet/subnet-07fef2dd1b2bb56f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-07fef2dd1b2bb56f6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "556245254540",
            "tags": {
              "Name": "TMCloud-private-1"
            },
            "tags_all": {
              "Name": "TMCloud-private-1"
            },
            "vpc_id": "vpc-03d6f203768b98756"
          },
          "dependencies": [
            "aws_vpc.TMCloud-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TMCloud-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:556245254540:subnet/subnet-0819bc6db9668e7b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0819bc6db9668e7b1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "556245254540",
            "tags": {
              "Name": "TMCloud-public-1"
            },
            "tags_all": {
              "Name": "TMCloud-public-1"
            },
            "vpc_id": "vpc-03d6f203768b98756"
          },
          "dependencies": [
            "aws_vpc.TMCloud-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "TMCloud-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:556245254540:vpc/vpc-03d6f203768b98756",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-040ea70df77802018",
            "default_route_table_id": "rtb-03cd1b73aaefe59bd",
            "default_security_group_id": "sg-05e0eea64d601571b",
            "dhcp_options_id": "dopt-999279e0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03d6f203768b98756",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03cd1b73aaefe59bd",
            "owner_id": "556245254540",
            "tags": {
              "Name": "TMCloud-VPC"
            },
            "tags_all": {
              "Name": "TMCloud-VPC"
            }
          }
        }
      ]
    }
  ]
}